--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,73 @@
 /* You can add global styles to this file, and also import other style files */
+
+.body {
+  font-size: 10px !important;
+}
+
+.p-inputtext {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 1rem;
+    color: #495057;
+    background: #ffffff;
+    padding: 0.25rem 0.25rem !important;
+    border: 1px solid #ced4da;
+    transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 3px;
+}
+
+.p-multiselect .p-multiselect-label {
+    padding: 0.25rem 0.5rem !important;
+    transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
+}
+
+.p-datatable .p-datatable-thead > tr > th {
+  text-align: center !important;
+  // padding: 0.571rem 0.857rem;
+  padding: 0 !important;
+  font-size: 12px !important;
+  font-weight: bold;
+
+  border: 1px solid #c8c8c8;
+  border-width: 1px 1px 1px 1px;
+  color: #333333;
+  background: #f4f4f4;
+  transition: background-color 0.2s, box-shadow 0.2s;
+}
+
+.p-datatable .p-datatable-sm .p-datatable-header {
+  font-size: 10px !important;
+  //white-space:  pre-wrap !important;
+}
+
+.p-datatable .p-datatable-sm {
+  font-size: 9px !important;
+  font-weight: bolder !important;
+  padding: 0 !important;
+}
+
+.p-datatable.p-datatable-sm .p-datatable-tbody > tr > td {
+  padding: 0 !important;
+  font-size: 13px !important;
+  font-weight: bolder !important;
+  // white-space: break-spaces !important;
+}
+
+.p-datatable tbody td {
+    white-space: normal !important;
+}
+
+.p-paginator {
+    background: #ffffff;
+    color: #6c757d;
+    border: solid #e9ecef;
+        border-top-width: medium;
+        border-right-width: medium;
+        border-bottom-width: medium;
+        border-left-width: medium;
+    border-width: 0;
+    padding: 0.15rem 0.10rem !important;
+    border-radius: 3px;
+}
