--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -5,6 +5,8 @@
   </ng-template>
 </p-overlayPanel> -->
 
+<!-- just for github error fix -->
+
 <p-dialog header="முழு தகவல்" [(visible)]="displayMeaning" [style]="{width: '45vw'}" [baseZIndex]="10000">
 
   <div class="card">
