--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -1,181 +1,231 @@
-/* @media only screen and (max-width: 360px) {
- div{
-     display:block;
-  }
- }
+// $color-header: rgb(205, 226, 247;
+// $color-number-left: dodgerblue;
+// $color-number-value: navy;
+// $color-number-chapter: #ac46b9;
+// $color-content-kural: white;
+// $color-content-kural-header: #b5f1c9;
+// $color-meaning: #f1c8f1;
+// $color-footer-english-head: white;
 
+$color-header: dodgerblue;
+$color-number-left: dodgerblue;
+$color-number-value: navy;
+$color-number-chapter: #ac46b9;
+$color-content-kural: #f1c8f1;
+$color-content-kural-header: #b5f1c9;
+$color-meaning: white;
+$color-footer-english-head: white;
 
- @media only screen and (min-width: 750px) {
-  div{
-    display: inline-block;
-  }
- } */
-
-/*
- .container {
-  display: flex;
-  flex-direction: column;
-}
-
-.container div {
-  border: 1px solid #f00;
-}
-
-@media (min-width: 660px) {
-  .container {
-    align-items: center;
-  }
-} */
-
-/* .container {
-    display: grid;
-    grid-gap: 5px;
-    grid-template-columns: repeat(auto-fit, 700px);
-    grid-template-rows: repeat(2, 100px);
-} */
-
-/* .container {
-    display: grid;
-    grid-template-columns: 700px 400px 700px;
-    grid-template-rows: 500px 50px;
-} */
-
-/* .container div {
-  border: 1px solid #f00;
-} */
-
-
-  $color-header: rgb(205, 226, 247);
-  $color-number-left: dodgerblue;
-  $color-number-value: navy;
-  $color-number-chapter: #ac46b9;
-  $color-content-kural: white;
-  $color-content-kural-header: #b5f1c9;
-  $color-meaning: #f1c8f1;
-  $color-footer-english-head: white;
-
-
+html,
 body {
-  position: relative;
-  width: 900px;
-  height: 900px;
-  font-family: "Muli", Arial, Helvetica, sans-serif;
-  background: #ffffff;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+}
+.container {
+  display: inline-block;
+  background-color: gray;
+  /* white-space: nowrap; */
+  /* display: flex; */
+  height: 100%;
+  width: 45vw;
+  /* flex-basis: auto; */
+  /* flex-basis: 0px; */
+  // border: solid 1px red;
+}
+@media only screen and (max-width: 900px) {
+  body {
+    margin: 0;
+    padding: 0;
+
+  }
+  .container {
+    width: 90vw;
+  }
+
+   .container .card .header {
+    font-size: 9px !important;
+  }
+}
+
+// .p-dialog {
+//   width: 30vw !important;
+// }
+
+.row td div {
+  padding: 7px 0px !important;
+}
+
+.row td div .table-kural {
+  padding: 3px 0px !important;
+}
+
+// .table-kural div {
+//   padding: 10px !important;
+// }
+
+.item img {
+  height: 100%;
+  width: 100%;
 }
 
 .card {
-  /* display: flexbox; */
-  position: relative;
-  // width: 825px;
-  // height: 600px;
-  font-family: "Muli", Arial, Helvetica, sans-serif;
-  background: #ffffff;
-  // width: 70%;
+  display: inline-block;
+
+  /* display: block;
+  display: contents;
+  display: flex;
+  display: flexbox;
+  display:inline-flex; */
+
+  width: 100%;
+  /* max-height: 436px; */
+  /* height: 46%; */
+  /* height: auto; */
+  /* flex-basis: 20pt; */
+  /* flex-shrink: 3; */
   text-align: center;
-  // background-color: red;
+  background-color: palegreen;
+  border: solid 2px dodgerblue;
+
+  /* align-content: flex-end; */
+  /* text-align: center; */
+
+  /* display: inline-flexbox; */
+  /* flex-wrap: wrap; */
+  /* align-items: center; */
+  /* justify-content: center; */
 }
 
 .card .header {
+  font-size: 15px;
+  font-weight: 700;
+  /* display: inline-line; */
+  /* display: table-cell; */
+  /* display: inline-flexbox; */
+  /* flex-wrap: nowrap; */
+  /* align-items: center; */
+  /* align-content: stretch; */
+  /* justify-content: center; */
+  /* text-align: center; */
+
   display: flex;
-  margin: 0 auto;
-  /* padding: 5px; */
-font-weight: 700;
+  /* align-items: center; */
+  justify-content: center;
+  height: 6%;
+  min-height: 45px;
   width: 100%;
-  /* background-color: #d1e7b0; */
   background-color: $color-header;
-}
 
-.section {
-  display: block;
-  margin: 0 auto;
-  padding: 5px;
-  width: 30%;
-  /* background-color: #3c7ee0; */
-  background-color: $color-number-left;
-}
-
-.section div {
-  display: block;
-  margin: 0 auto;
-  padding: 4px;
-  /* width: 95%; */
-  background-color: white;
-  border-radius: 50px;
-}
-
-.chapter {
-  display: block;
-  margin: 0 auto;
-  padding: 5px;
-  width: 55%;
-  /* background-color: #ac46b9; */
-  background-color: $color-number-chapter;
-}
-
-.chapter div {
-  display: block;
-  margin: 0 auto;
-  padding: 4px;
-  width: 95%;
-  background-color: white;
-  border-radius: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
 }
 
 .number {
-  /* position: absolute; */
   width: 17%;
-  height: 40px;
-  /* left: 5px;
-  top: 5px; */
+  // height: 100%;
 
-  display: flex;
-  // background: #ffffff;
-  background-color: $color-number-left;
+  display: inline-flex;
+  //display: block;
+  align-items: center;
+  justify-content: center;
+  background: #ffffff;
   border: 1px solid #1e90ff;
   box-sizing: border-box;
-  // border-radius: 0px 50px 50px 0px;
+  border-radius: 0px 50px 50px 0px;
 }
 
 .number .left {
-  /* position: absolute; */
-  display: flex;
+  //display: inline-flex;
+  display: block;
+
+  // display: inline-block;
+
+  /* display: inline-flexbox; */
   width: 45%;
-  height: 40px;
-  padding-left: 5px;
-  /* left: 5px;
-  top: 5px; */
-  align-content: center;
+  height: 100%;
+  /* padding-left: 5px; */
+  /* align-items: center;
+  align-content: center; */
+  display: flex;
   align-items: center;
+  justify-content: center;
   background: $color-number-left;
   border-radius: 0px;
   color: white;
 }
 
 .number .value {
-  display: flex;
+  /* display: inline-block; */
 
   width: 60%;
-  height: 40px;
-  padding: 0 15px;
-  /* background-color: rgb(47, 255, 141); */
+  height: 100%;
+  /* padding: 0 15px; */
+  /* background-color: rgb(47, 255, 141; */
   font-family: Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: bold;
-  font-size: 16px;
-  line-height: 16px;
-  /* display: flexbox; */
-  align-items: center;
-  /* border-radius: 0px; */
+  // font-size: 14px;
 
-  /* color: dodgerblue; */
   color: $color-number-value;
-  background-color: white;
-  // border-radius: 0px 50px 50px 0px;
 }
 
-.content {
+.section {
+  /* display: block; */
+
+  margin: 0 auto;
+  padding: 5px;
+  width: 30%;
+  /* align-content: center;
+  justify-content: baseline; */
+  /* background-color: #3c7ee0; */
+  background-color: $color-number-left;
+}
+
+.section div {
+  /* display: block; */
+  margin: 0 auto;
+  /* padding: 4px; */
+  height: 99.5%;
+  background-color: white;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.chapter {
+  /* display: block; */
+  margin: 0 auto;
+  padding: 5px;
+  width: 52%;
+
+  /* background-color: #ac46b9; */
+  background-color: $color-number-chapter;
+}
+
+.chapter div {
+  /* display: block; */
+  margin: 0 auto;
+  /* padding: 4px; */
+  width: 95%;
+  height: 99.5%;
+
+  /* white-space: normal;
+  flex: 1; */
+  background-color: white;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+content {
   display: flexbox;
   margin: 0 auto;
+
   /* padding: 10px; */
   /* width: 95%; */
   /* background-color: #3c7ee0; */
@@ -184,110 +234,193 @@ font-weight: 700;
 .content .kural {
   display: flex;
   margin: 0 auto;
-  padding: 0px 0px;
-
+  padding: 7px 0px;
+  /* height: 8%; */
   width: 100%;
+
+  min-height: 60px;
   /* background-color: #eee69d; */
-  /* background-color: $color-content-kural); */
-  /* color: $color-content-kural); */
+  /* background-color: $color-content-kural; */
+  /* color: $color-content-kural; */
   background-color: $color-content-kural-header;
   text-align: left;
   align-items: center;
   font-weight: 700;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
 }
 
 .content .kural .head {
-  display: block;
+  display: inline-flexbox;
+  /* display: block; */
   margin: 0 auto;
-  padding: 5px 0px;
+  padding: 7px 12px;
 
-  width: 20%;
+  /* width: 12%; */
   /* background-color: #e03ce0; */
-  /* background-color: $color-content-kural-header);
-  color: $color-number-value); */
+  /* background-color: $color-content-kural-header;
+  color: $color-number-value; */
   background-color: $color-footer-english-head;
-  border: 1px solid #f00;
-  text-align: center;
+  /* border: 1px solid #f00; */
+  border: 1px solid #10ac2a;
+
   align-items: center;
+  justify-content: center;
 }
 
 .content .kural .body {
-  display: block;
-  margin: 0 auto;
-  padding: 0px 50px;
-  font-weight: 700;
-  font-size: 16px !important;
+  /* display: block; */
+  margin: 0px auto;
+  padding: 5px 5px;
 
   width: 80%;
   /* background-color: #e03ce0; */
-  background-color: $color-content-kural-header;
+  /* background-color: $color-content-kural; */
   text-align: left;
   align-items: center;
+
+  display: inline-block;
+  align-items: center;
+  justify-content: center;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 21px;
 }
 
 .content .meaning {
-  display: block;
-  margin: 0 auto;
-  padding: 5px 0px;
+  display: inline-flexbox;
+  /* display: flow; */
+  margin: 0px 0px;
+  /* padding: 0px 10px; */
+  /* height: 70%; */
   width: 100%;
-  font-size: 14px !important;
-  /* background-color: white; */
-  background-color: $color-meaning;
+  /* background-color: #f8e7f8; */
+  /* background-color: $color-content-kural; */
+  background-color: white;
+  /* background-color: $color-meaning; */
+  /* background-color: $color-content-kural; */
   text-align: left;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .content .meaning .head {
   border: 1px solid #f00;
-  display: block;
-  margin: 0 auto;
-  padding: 5px;
+  display: inline-flex;
+  /* display: flex; */
+
+  margin: 10px;
+  padding: 5px 12px;
   /* text-decoration: underline; */
 
-  width: 15%;
-  /* background-color: $color-meaning); */
+  /* width: 15%; */
+  /* background-color: $color-meaning; */
   background-color: white;
-  /* filter: brightness(350%); */
-  text-align: center;
+  /* filter: brightness(350%; */
+  /* text-align: center; */
   align-items: center;
+  justify-content: center;
 }
 
 .content .meaning .subhead {
   /* text-decoration: underline; */
-  background-color: white;
-  padding: 4px 4px;
-  width: 24%;
+  /* background-color: white; */
+  border: 1px solid #f00;
+  font-size: 13px;
+  font-weight: 700;
+  padding: 5px 12px;
+  /* width: 24%; */
+  /* text-align: left; */
+  margin: 0px;
+  /* background-color: #f8e7f8; */
+  display: inline-flex;
+  background-color: #eec2ee;
+  /*
+  margin: 0 auto;
+  padding: 5px;
+  text-decoration: underline;
+
+  width: 100%;
+  background-color: #e03ce0;
   text-align: left;
-  margin: 10px;
+  align-items: center; */
 }
 
 .content .meaning .body {
-  display: flex;
-  margin: 0 auto;
+  /* display: inline-flexbox; */
+  /* display: flex; */
+  /* display: block; */
+  /* text-overflow: ellipsis; */
+
+  /* margin: 0px 10px; */
   padding: 10px 10px;
-font-size: 14px !important;
-  /* width: 94%; */
-  /* background-color: #e03ce0; */
-  background-color: white;
-  text-align: left;
-  align-items: center;
+  /* padding-bottom: 15px; */
+  font-size: 15px;
   font-weight: 700;
+  /* flex-wrap: wrap; */
+  /* width: 94%; */
+  /* background-color: #e59be5; */
+  /* background-color: white; */
+  /* background-color: $color-meaning-body; */
+  background-color: #f8e7f8;
+
+  /* text-align: center; */
+  /* align-items: center; */
+
+  /* display: inline-block; */
+  /* display: inline-flexbox; */
+  /* align-items: center; */
+  /* flex-direction: row; */
+  justify-content: center;
 }
 
 .footer {
-  display: flexbox;
-  margin: 0 auto;
-  padding: 5px 0px;
-  /* width: 95%; */
+  display: flex;
+
+  /* display: block; */
+  /* display: inline-flexbox; */
+
+  /* flex-shrink: 1; */
+  /* margin: 15px auto; */
+  /* padding: 5px 10px; */
+  /* height: 20%; */
+  /* min-height: 70px; */
+
+  width: 100%;
   background-color: #10ac2a;
-  text-align: left;
-  align-items: center;
+  /* align-items: center; */
+  /* align-self: flex-end; */
+  /* align-content: flex-end; */
 }
 
-.footer .english {
-  display: flex;
-  margin: 0 auto;
-  padding: 5px 10px;
+.footer .head {
+  /* display: flex; */
+
+  /* display: block; */
+  display: inline-flexbox;
+  /* margin: 6px 6px; */
+  padding: 10px 5px;
+  font-size: 12px;
+  font-weight: 700;
+  /* width: 21%; */
+  background-color: $color-footer-english-head;
+  /* border: 1px solid #f00; */
+
+  /* align-items: center;
+  justify-content: center; */
+}
+
+.footer .body {
+  display: inline-flexbox;
+  /* margin: 0 auto; */
+  /* margin: 0px 6px; */
+  margin-left: 0px;
+  padding: 10px 10px;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   font-weight: 700;
   /* width: 95%; */
@@ -295,16 +428,5 @@ font-size: 14px !important;
   background-color: $color-content-kural-header;
   text-align: left;
   align-items: center;
-}
-
-.footer .english .head {
-  display: block;
-  margin: 0 auto;
-  padding: 8px 0px;
-  font-size: 14px;
-
-  width: 24%;
-  background-color: $color-footer-english-head;
-  border: 1px solid #f00;
-  text-align: center;
+  justify-content: center;
 }
